# threep

./: .hgignore  LICENSE  README.md  hie.yaml  threep.cabal
src/: Calc.hs  Main.hs
