cabal-version:       2.4

name:                threep
version:             0.2.0.0
synopsis:            Threepenny-GUI example project
license:             BSD-3-Clause
license-file:        LICENSE
author:              Aleksei Pirogov
maintainer:          astynax@users.noreply.github.com

executable threep
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  main-is:             Main.hs
  other-modules:       Calc
  build-depends:       base ^>=4.12.0.0,
                       threepenny-gui ^>=0.8.3.1,
                       reactive-banana,
                       data-default,
                       stm,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
